UPDATED: renamed table-row-port to table-row-predicate

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="table-row-port.css">
+    <link rel="stylesheet" type="text/css" href="table-row-predicate.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -127,7 +127,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRowPort Table-cells">
+    <div data-montage-id="owner" class="TableRowPredicate Table-cells">
         <div><div data-montage-id="property"></div></div>
         <div data-montage-id="operatorSubstitution">
             <div data-arg="class">
@@ -139,10 +139,10 @@
         </div>
         <div data-montage-id="valueSubstitution">
             <div data-arg="class">
-                <div><div data-montage-id="classValues"></div></div>
+                <div><div data-montage-id="classValues" class="Select-value"></div></div>
             </div>
             <div data-arg="severity">
-                <div><div data-montage-id="severityValues"></div></div>
+                <div><div data-montage-id="severityValues" class="Select-value"></div></div>
             </div>
         </div>
     </div>
