--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
@@ -42,7 +42,7 @@
         },
 
         "newEntry": {
-            "prototype": "./table-row-port.reel",
+            "prototype": "./table-row-predicate.reel",
             "properties": {
                 "element": {"#": "newEntry"}
             },
@@ -52,7 +52,7 @@
         },
 
         "entry": {
-            "prototype": "./table-row-port.reel",
+            "prototype": "./table-row-predicate.reel",
             "properties": {
                 "element": {"#": "entry"}
             },
@@ -64,7 +64,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TablePort">
+    <div data-montage-id="owner" class="TablePredicate">
         <div data-montage-id="table">
             <div data-arg="table-editable-header-toolbar" data-montage-id="tableHeader"></div>
             <div data-arg="row-new" data-montage-id="newEntry" class="Table-row"></div>
