Fix selection issue in alerts & filter

--- a/ui/sections/system/inspectors/alert.reel/alert.html
+++ b/ui/sections/system/inspectors/alert.reel/alert.html
@@ -10,6 +10,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
+                "selectedObject": {"<->": "@owner.context.cascadingListItem.selectedObject"},
                 "selectedEntry": {"<->": "@entries.selectedObject"}
             }
         },
