set property placeholderValue to placeholder to stay consistent

--- a/ui/controls/cron.reel/cron.html
+++ b/ui/controls/cron.reel/cron.html
@@ -25,7 +25,7 @@
             "properties": {
                 "element": {"#": "description"},
                 "label": "Description",
-                "placeholderValue": "enter a short description"
+                "placeholder": "enter a short description"
             },
             "bindings": {
                 "value": {"<-": "@owner.description"}
