--- a/ui/controls/foldable-section.info/sample/ui/main.reel/main.html
+++ b/ui/controls/foldable-section.info/sample/ui/main.reel/main.html
@@ -31,7 +31,7 @@
             "prototype": "blue-shark/ui/multiple-select.reel",
             "properties": {
                 "element": {"#": "multipleSelect"},
-                "placeholderValue": "enter item"
+                "placeholder": "enter item"
             },
             "bindings": {
                 "options": {"<->": "@owner.options"},
