--- a/ui/controls/viewer.reel/view-mode.reel/view-mode.html
+++ b/ui/controls/viewer.reel/view-mode.reel/view-mode.html
@@ -48,7 +48,7 @@
             "prototype": "blue-shark/ui/text-field.reel",
             "properties": {
                 "element": {"#": "searchField"},
-                "placeholderValue": "enter search"
+                "placeholder": "enter search"
             }
         },
         "viewerSearch": {
