--- a/ui/inspectors/service.reel/dyndns-service.reel/dyndns-service.html
+++ b/ui/inspectors/service.reel/dyndns-service.reel/dyndns-service.html
@@ -26,7 +26,7 @@
             "properties": {
                 "element": {"#": "ipserver"},
                 "label": "IP server",
-                "placeholderValue": "eg. checkip.dyndns.org:80 /."
+                "placeholder": "eg. checkip.dyndns.org:80 /."
             },
             "bindings": {
                 "value": {"<->": "@owner.object.ipserver"}
