--- a/ui/inspectors/service.reel/iscsi-service.reel/iscsi-service.html
+++ b/ui/inspectors/service.reel/iscsi-service.reel/iscsi-service.html
@@ -59,7 +59,7 @@
             },
             "bindings": {
                 "values": {"<->": "@owner.object.isns_servers"},
-                "placeholderValue": {"<-": "!@owner.object.isns_servers ? 'eg. example.com' : ''"}
+                "placeholder": {"<-": "!@owner.object.isns_servers ? 'eg. example.com' : ''"}
             }
         }
     }
