--- a/ui/inspectors/user.reel/user.html
+++ b/ui/inspectors/user.reel/user.html
@@ -274,7 +274,7 @@
                 "element": {"#": "groups"},
                 "label": "Additional Groups",
                 "labelPath": "name",
-                "placeholderValue": "Select a group",
+                "placeholder": "Select a group",
                 "validationPath": "groups",
                 "converter": {"@": "additionalGroupsConverter"}
             },
