--- a/ui/sections/network/inspectors/network-configuration.reel/network-configuration.html
+++ b/ui/sections/network/inspectors/network-configuration.reel/network-configuration.html
@@ -81,7 +81,7 @@
             "properties": {
                 "element": {"#": "http_proxy"},
                 "label": "HTTP Proxy",
-                "placeholderValue": "eg. http://a.com:1234"
+                "placeholder": "eg. http://a.com:1234"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.http_proxy"}
@@ -140,7 +140,7 @@
             },
             "bindings": {
                 "value": {"<->": "@owner.object.gateway.ipv4"},
-                "placeholderValue": {"<-": "'eg. 1.2.3.4/16'"}
+                "placeholder": {"<-": "'eg. 1.2.3.4/16'"}
             }
         },
         "gatewayIpv6": {
@@ -151,7 +151,7 @@
             },
             "bindings": {
                 "value": {"<->": "@owner.object.gateway.ipv6"},
-                "placeholderValue": {"<-": "'eg. ::ffff:102:304'"}
+                "placeholder": {"<-": "'eg. ::ffff:102:304'"}
             }
         },
         "dhcpGatewaySettings": {
