--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset-settings.reel/volume-dataset-settings.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset-settings.reel/volume-dataset-settings.html
@@ -61,7 +61,7 @@
                 "element": {"#": "quota"},
                 "label": "Quota",
                 "converter": {"@": "sizeConverter"},
-                "placeholderValue": "eg. 100GB"
+                "placeholder": "eg. 100GB"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.properties.quota.value"},
@@ -74,7 +74,7 @@
                 "element": {"#": "refquota"},
                 "label": "Refquota",
                 "converter": {"@": "sizeConverter"},
-                "placeholderValue": "eg. 100GB"
+                "placeholder": "eg. 100GB"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.properties.refquota.value"},
@@ -87,7 +87,7 @@
                 "element": {"#": "reservation"},
                 "label": "Reservation",
                 "converter": {"@": "sizeConverter"},
-                "placeholderValue": "eg. 100GB"
+                "placeholder": "eg. 100GB"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.properties.reservation.value"},
@@ -100,7 +100,7 @@
                 "element": {"#": "refreservation"},
                 "label": "Refreservation",
                 "converter": {"@": "sizeConverter"},
-                "placeholderValue": "eg. 100GB"
+                "placeholder": "eg. 100GB"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.properties.refreservation.value"},
