--- a/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
+++ b/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
@@ -92,7 +92,7 @@
             "properties": {
                 "element": {"#": "mediaFsType"},
                 "label": "Media filesystem type",
-                "placeholderValue": "e.g. msdosfs, leave empty to autodetect"
+                "placeholder": "e.g. msdosfs, leave empty to autodetect"
             },
             "bindings": {
                 "value": {"<->": "@owner.importFsType"}
