--- a/ui/sections/system/inspectors/ntpserver.reel/ntpserver.html
+++ b/ui/sections/system/inspectors/ntpserver.reel/ntpserver.html
@@ -34,7 +34,7 @@
             "properties": {
                 "element": {"#": "address"},
                 "label": "Address",
-                "placeholderValue": "e.g. utcnist.colorado.edu"
+                "placeholder": "e.g. utcnist.colorado.edu"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.address"}
@@ -99,7 +99,7 @@
             "properties": {
                 "element": {"#": "minpoll"},
                 "label": "Minimum Poll",
-                "placeholderValue": "e.g. 6",
+                "placeholder": "e.g. 6",
                 "converter": {"@": "minpollConverter"}
             },
             "bindings": {
@@ -125,7 +125,7 @@
             "properties": {
                 "element": {"#": "maxpoll"},
                 "label": "Maximum Poll",
-                "placeholderValue": "e.g. 10",
+                "placeholder": "e.g. 10",
                 "converter": {"@": "maxpollConverter"}
             },
             "bindings": {
