--- a/ui/sections/wizard/inspectors/directory-services.reel/directory-services.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/directory-services.html
@@ -26,7 +26,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
-                "label": "Name"
+                "label": "Name",
+                "placeholder": "eg: Tech AD"
             },
             "bindings": {
                 "value": {"<->": "@options.selectedValue.name"}
