--- a/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
+++ b/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
@@ -42,7 +42,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
-                "placeholderValue": "enter name...",
+                "placeholder": "enter name...",
                 "label": "Name"
             },
             "bindings": {
@@ -53,7 +53,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "key"},
-                "placeholderValue": "enter key...",
+                "placeholder": "enter key...",
                 "label": "Key"
             },
             "bindings": {
@@ -64,7 +64,7 @@
             "prototype": "blue-shark/ui/field-password.reel",
             "properties": {
                 "element": {"#": "password"},
-                "placeholderValue": "enter password...",
+                "placeholder": "enter password...",
                 "label": "Password"
             },
             "bindings": {
