--- a/ui/sign-in.reel/sign-in.html
+++ b/ui/sign-in.reel/sign-in.html
@@ -38,7 +38,7 @@
             "properties": {
                 "element": {"#": "userName"},
                 "converter": {"@": "trimConverter"},
-                "placeholderValue": "username"
+                "placeholder": "username"
             },
             "bindings": {
                 "value": {"<->": "@owner.userName"}
@@ -49,7 +49,7 @@
             "prototype": "blue-shark/ui/text-field.reel",
             "properties": {
                 "element": {"#": "password"},
-                "placeholderValue": "password"
+                "placeholder": "password"
             },
             "bindings": {
                 "value": {"<->": "@owner.password"}
