wizard counter is bold

--- a/ui/sections/wizard/inspectors/wizard.reel/wizard.html
+++ b/ui/sections/wizard/inspectors/wizard.reel/wizard.html
@@ -106,7 +106,7 @@
     <div data-montage-id="owner" class="Wizard">
         <div class="Wizard-header g-margin-bottom">
             <h2 data-montage-id="stepsLabel" class="flush-bottom"></h2>
-            <div class="Wizard-counter">
+            <div class="Wizard-counter bold">
                 <span data-montage-id="currentPageNumber"></span>
                 of
                 <span data-montage-id="totalPageNumber"></span>
