adds host name and username back into sidebar

--- a/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
+++ b/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
@@ -42,7 +42,7 @@
                 "element": {"#": "host"}
             },
             "bindings": {
-                "value": {"<-": "@owner.session.host.replace(@owner.dotRegEx, '. ')"}
+                "value": {"<-": "@owner.application.sessionService.session.host.replace(@owner.dotRegEx, '. ')"}
             }
         },
         "date": {
