--- a/ui/main-sidebar/main-sidebar.reel/main-sidebar.html
+++ b/ui/main-sidebar/main-sidebar.reel/main-sidebar.html
@@ -46,7 +46,7 @@
                 "element": {"#": "username"}
             },
             "bindings": {
-                "value": {"<-": "@owner.session.username"}
+                "value": {"<-": "@owner.application.sessionService.session.username"}
             }
         },
         "reboot": {
