adds placeholder values to directory services and mail

--- a/ui/inspectors/directory-services.reel/directory-service.reel/directory-service.html
+++ b/ui/inspectors/directory-services.reel/directory-service.reel/directory-service.html
@@ -16,7 +16,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
-                "label": "Name"
+                "label": "Name",
+                "placeholder": "enter name"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.name"}
