--- a/ui/inspectors/directory-services.reel/nis-service.reel/nis-service.html
+++ b/ui/inspectors/directory-services.reel/nis-service.reel/nis-service.html
@@ -14,7 +14,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "domain"},
-                "label": "NIS domain name"
+                "label": "NIS domain name",
+                "placeholder": "e.g. example.com"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.parameters.domain"}
@@ -25,7 +26,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "server"},
-                "label": "Server Address"
+                "label": "Server Address",
+                "placeholder": "e.g. nis.example.com"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.parameters.server"}
