--- a/ui/sections/wizard/inspectors/directory-services.reel/directory-services.html
+++ b/ui/sections/wizard/inspectors/directory-services.reel/directory-services.html
@@ -27,7 +27,7 @@
             "properties": {
                 "element": {"#": "name"},
                 "label": "Name",
-                "placeholder": "eg: Tech AD"
+                "placeholder": "e.g. Tech AD"
             },
             "bindings": {
                 "value": {"<->": "@options.selectedValue.name"}
