Fix traffic-light class management

--- a/ui/controls/traffic-light.reel/traffic-light.html
+++ b/ui/controls/traffic-light.reel/traffic-light.html
@@ -9,7 +9,8 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('is-hidden')": {"<-": "!@owner.colorMapping"}
+                "classList.has('is-hidden')": {"<-": "!@owner.colorMapping"},
+                "lightClass": {"<-": "@owner.colorMapping[@owner.value]"}
             }
         }
     }
