--- a/ui/sections/storage/inspectors/overview.reel/overview.html
+++ b/ui/sections/storage/inspectors/overview.reel/overview.html
@@ -30,7 +30,7 @@
                 "element": {"#": "volumes"}
             },
             "bindings": {
-                "content": {"<-": "@owner.object.volumes.filter{properties}"}
+                "content": {"<-": "@owner.object.volumes.filter{properties}.sorted{id}"}
             }
         },
         "volume": {
